src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>RingLeadTrigger__RingLead_Processed_Count__c</fullName>
        <label>Processed Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Type_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Type Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLeadTrigger__Trigger_Type_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Type Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RingLead_DMS_Status__c</fullName>
        <description>Indicates when the RingLead DMS webhook has finished processing a new Marketo record and it can be synced to SFDC. Values can include &apos;true&apos;, &apos;link_to_account&apos;, &apos;convert_to_contact&apos;, and &apos;Orphan:[SFDC record ID]&apos;.  Also, if an existing SFDC record is not synced to Marketo and it is a duplicate of a new Marketo record, the value will be set to &apos;SF_Orphan:[Marketo record ID].</description>
        <inlineHelpText>Indicates when the RingLead DMS webhook has finished processing a new Marketo record and it can be synced to SFDC.</inlineHelpText>
        <label>RingLead DMS Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RingLead_Linked_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>When you select the option to link a Lead to a matched Account and the Marketo person record matches an Account, DMS will update this field with the Salesforce Account ID.
JIRA: SFDCSPT-78, 9/21/2020</description>
        <inlineHelpText>When appropriate settings are selected in RingLead, DMS will update this filed with the Salesforce Account ID, linking the Lead to a matched Account.</inlineHelpText>
        <label>RingLead Linked Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Linked Leads (RingLead)</relationshipLabel>
        <relationshipName>Linked_Leads_RingLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RingLead_Overwritten_Field_Values__c</fullName>
        <description>This field stores the field values from the losing record in a merge. It is auto-populated by RingLead.</description>
        <inlineHelpText>This field stores the field values from the losing record in a merge. It is auto-populated by RingLead.</inlineHelpText>
        <label>RingLead Overwritten Field Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role_in_Purchasing__c</fullName>
        <label>Role in Purchasing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Determine Need</fullName>
                </value>
                <value>
                    <fullName>Evaluate Products/Services</fullName>
                </value>
                <value>
                    <fullName>Financial Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Implement Products/Services</fullName>
                </value>
                <value>
                    <fullName>Recommend and Specify Products/Services</fullName>
                </value>
                <value>
                    <fullName>Technical Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Primary Account Contact</fullName>
                </value>
                <value>
                    <fullName>Accounts Payable Contact</fullName>
                </value>
                <value>
                    <fullName>No Longer With Company</fullName>
                </value>
                <value>
                    <fullName>Purchasing Team</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Route_Through_Lean_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When marked true leads will be routed through Lean Data Continuous Flow</description>
        <label>Route Through Lean Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAL_Date__c</fullName>
        <label>SAL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAL_Original_Date__c</fullName>
        <label>SAL Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAO_Date__c</fullName>
        <label>SAO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Lead_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SQL_Date__c</fullName>
        <label>SQL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SQL_Original_Date__c</fullName>
        <label>SQL Original Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Single_Opt_In_Date__c</fullName>
        <label>Single Opt-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Single_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Single Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Soft_Opt_In_Date__c</fullName>
        <label>Soft Opt-In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Soft_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soft Opt-In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Partner_Newsletter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>a7y3s0000004HyrAAE discussed with Rod,Logan,Julia</description>
        <inlineHelpText>Indicates subscription to partner communications such as newsletter, webinar</inlineHelpText>
        <label>Subscription:Partner Newsletter (manual)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Contact_Text__c</fullName>
        <label>Support Contact Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Synced_From_Outreach__c</fullName>
        <businessOwnerUser>stephen.depaoli@neo4j.com.trnint</businessOwnerUser>
        <description>This field is part of the Salesforce and Outreach integration. Will display &quot;1&quot; when a record is synced from Outreach to Salesforce. Do NOT change field type to Checkbox -- in Outreach custom fields are &quot;Text&quot; only, so the target field in Salesforce must be of the same type.

JIRA: SFDCSPT-126, 9/28/2020</description>
        <inlineHelpText>Auto-populated by Outreach. Will display &quot;1&quot; when a record is synced from Outreach to Salesforce.</inlineHelpText>
        <label>Synced from Outreach</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Industry__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>A lead who works in a target industry</description>
        <inlineHelpText>A lead who works in a target industry</inlineHelpText>
        <label>Target Industry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Persona__c</fullName>
        <businessOwnerGroup>Marketing_Operations</businessOwnerGroup>
        <defaultValue>false</defaultValue>
        <description>A lead who is the target persona</description>
        <inlineHelpText>A lead who is the target persona</inlineHelpText>
        <label>Target Persona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Opt-out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Frame_1__c</fullName>
        <label>Time Frame 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>US_Territory_Lead__c</fullName>
        <description>Field that populates the US territory based off of the lead state</description>
        <formula>IF(ISBLANK(State), &quot; &quot;, 

IF(CONTAINS(&quot;Alaska:Hawaii:California:Washington:Oregon:Idaho:Nevada:Arizona:Utah:Wyoming:Montana:Colorado:New Mexico&quot;, State), &quot;West&quot;, 

IF(CONTAINS(&quot;South Dakota:North Dakota:Nebraska:Kansas:Oklahoma:Texas:Louisiana:Arkansas:Missouri:Iowa:Minnesota:Wisconsin:Illinois:Tennessee:Mississippi:Alabama:Michigan:Indiana&quot;, State), &quot;Central&quot;, 

IF(CONTAINS(&quot;Maine:Vermont:New Hampshire:Massachusetts:Connecticut:Pennsylvania:New York:New Jersey:Delaware:Washington DC:Maryland:West Virginia:Virginia:North Carolina:South Carolina:Georgia:Florida:Kentucky:Ohio:Rhode Island:District of Columbia:Puerto Rico&quot;, State), &quot;East&quot;, 

&quot; &quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>US Territory (Lead)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Contact_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Contacts that were presented to the user at the time they created it.</description>
        <label>Contact Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Current_Endpoint__c</fullName>
        <label>Current Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__EnrichedOn__c</fullName>
        <label>EnrichedOn</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Lead_Dupes_Ignored__c</fullName>
        <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Leads that were presented to the user at the time they created it.</description>
        <label>Lead Dupes Ignored</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__RingLead_App_Field__c</fullName>
        <label>RingLead App Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__RingLead_Last_Processed_Date__c</fullName>
        <label>Last Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Ringlead_Id__c</fullName>
        <label>Ringlead Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueEntry__Set_DML_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Set DML Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Use_Case_Type__c</fullName>
        <label>Use Case Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Query_Activity__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the relative volume of queries an AuraDB user has run over the past 14 days. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the relative volume of queries an AuraDB user has run over the past 14 days. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>User Query Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Average</fullName>
                </value>
                <value>
                    <fullName>Above Average</fullName>
                </value>
                <value>
                    <fullName>Below Average</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Usage_Cadence__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the frequency at which an AuraDB user uses (runs queries against) at least one of their databases (measured by usage over the past 14 days). This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the frequency at which an AuraDB user uses (runs queries against) at least one of their databases (measured by usage over the past 14 days). This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>User Usage Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zendesk_Tickets_Submitted_last_30_days__c</fullName>
        <businessOwnerGroup>Aura_Self_Serve_Growth_Team</businessOwnerGroup>
        <description>Indicates the number of support tickets that an AuraDB user has submitted over the past 30 days. This information serves to assist the SDR and Sales reps with both their prospecting and their sales approach. Updated daily from Segment/Marketo.
JIRA: SFDCSPT-594</description>
        <inlineHelpText>Indicates the number of support tickets that an AuraDB user has submitted over the past 30 days. This field is updated daily by Marketo that receives its data from Segment managed by the Aura Self-Serve Growth Team.</inlineHelpText>
        <label>Zendesk Tickets Submitted (last 30 days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bizible2__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Custom field lookup from Bizible. This associates the lead to an existing Account.</description>
        <inlineHelpText>Custom field lookup from Bizible. This associates the lead to an existing Account.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name_FT__c</fullName>
        <label>Ad Campaign Name (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Ad_Campaign_Name_LC__c</fullName>
        <label>Ad Campaign Name (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__BizibleId__c</fullName>
        <label>BizibleId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_FT__c</fullName>
        <label>Landing Page (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Landing_Page_LC__c</fullName>
        <label>Landing Page (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_FT__c</fullName>
        <description>Type of marketing activity</description>
        <inlineHelpText>Type of marketing activity</inlineHelpText>
        <label>Marketing Channel (FT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Marketing_Channel_LC__c</fullName>
        <description>Type of marketing activity</description>
        <inlineHelpText>Type of marketing activity</inlineHelpText>
        <label>Marketing Channel (LC)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date_FT__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date (FT)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Date_LC__c</fullName>
        <description>The date that the session activity occurred</description>
        <inlineHelpText>The date that the session activity occurred</inlineHelpText>
        <label>Touchpoint Date (LC)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source_FT__c</fullName>
        <description>The name of the referrer</description>
        <inlineHelpText>The name of the referrer</inlineHelpText>
        <label>Touchpoint Source (FT)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bizible2__Touchpoint_Source_LC__c</fullName>
        <description>The name of the referrer</description>
        <inlineHelpText>The name of the referrer</inlineHelpText>
        <label>Touchpoint Source (LC)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfox_first_name__c</fullName>
        <description>Data Fox First Name Lead</description>
        <label>DF First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dfox_phone__c</fullName>
        <description>Datafox Phone lead</description>
        <label>DF Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>dfox_title__c</fullName>
        <description>Datafox Title Lead</description>
        <label>DF Title</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iSell__OSKeyID__c</fullName>
        <description>Unique company identifier. It is a required field and, in Salesforce Professional Edition, must be visible and available on page layouts for all users.</description>
        <externalId>true</externalId>
        <label>D&amp;B ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>Marketo Acquisition Date</description>
        <inlineHelpText>Marketo Acquisition Date</inlineHelpText>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>Marketo Acquisition Program</description>
        <inlineHelpText>Marketo Acquisition Program</inlineHelpText>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_State_Region__c</fullName>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <description>Marketo Lead Score</description>
        <inlineHelpText>Marketo Lead Score</inlineHelpText>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Engine__c</fullName>
        <label>Original Seach Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Phrase__c</fullName>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_ID__c</fullName>
        <label>Marketo Lead ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Add_to_Marketo_Campaign__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Add_to_Marketo_Campaign_Mobile?contactType=Lead&amp;contactIds=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;Add to Marketo Campaign&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Add to Marketo Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__HideDate__c</fullName>
        <label>Hide Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Date__c</fullName>
        <label>Last Interesting Moment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Desc__c</fullName>
        <label>Last Interesting Moment Desc</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Source__c</fullName>
        <label>Last Interesting Moment Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment_Type__c</fullName>
        <label>Last Interesting Moment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Last_Interesting_Moment__c</fullName>
        <formula>IF(!ISNULL(mkto_si__Last_Interesting_Moment_Date__c), 
HYPERLINK(&quot;/apex/mkto_si__Lead_Full_List?view=IM&amp;id=&quot; &amp; Id, mkto_si__Last_Interesting_Moment_Type__c &amp; &quot; -- &quot; &amp; mkto_si__Last_Interesting_Moment_Desc__c ), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Interesting Moment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__MSIContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MSIContactId</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score_Value__c</fullName>
        <label>Relative Score Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Relative_Score__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Relative_Score_Value__c, 0), 3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/star0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/star1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/star2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/star3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relative Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency_Value__c</fullName>
        <label>Urgency Value</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <formula>CASE( MIN(MAX(mkto_si__Urgency_Value__c, 0),3),
    0, IMAGE(&quot;https://app.marketo.com/images/icons/fire0.png&quot;,&quot;0&quot;),
    1, IMAGE(&quot;https://app.marketo.com/images/icons/fire1.png&quot;,&quot;1&quot;),
    2, IMAGE(&quot;https://app.marketo.com/images/icons/fire2.png&quot;,&quot;2&quot;),
    3, IMAGE(&quot;https://app.marketo.com/images/icons/fire3.png&quot;,&quot;3&quot;),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__View_in_Marketo__c</fullName>
        <formula>HYPERLINK (&quot;/apex/mkto_si__Marketo_Lead_Detail?objType=Lead&amp;objId=&quot; &amp; Id, IMAGE(&quot;https://app.marketo.com/images/icons16/marketo16.png&quot;,&quot;View in Marketo&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View in Marketo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_sync__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to Marketo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>neo_account_revenue__c</fullName>
        <label>Annual Revenue Range ($)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 10 Million</fullName>
                </value>
                <value>
                    <fullName>10 - 25 Million</fullName>
                </value>
                <value>
                    <fullName>25 - 100 Million</fullName>
                </value>
                <value>
                    <fullName>100 - 500 Million</fullName>
                </value>
                <value>
                    <fullName>500 Million - 1 Billion</fullName>
                </value>
                <value>
                    <fullName>1 Billion - 5 Billion</fullName>
                </value>
                <value>
                    <fullName>5 Billion +</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>Aura_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Neo4j Aura</label>
        <queue>Neo4j_Aura</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_MQL_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>mkto71_Lead_Score__c</columns>
        <columns>MQL_Date__c</columns>
        <columns>Last_Touch_MQL__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>neo_account_revenue__c</columns>
        <columns>Opt_In__c</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <columns>Behavior_Score__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>MQL</value>
        </filters>
        <label>My MQL Leads</label>
    </listViews>
    <listViews>
        <fullName>My_SAL_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>mkto71_Lead_Score__c</columns>
        <columns>SAL_Date__c</columns>
        <columns>Last_Touch_SAL__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>Opt_In__c</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <columns>neo_account_revenue__c</columns>
        <columns>Behavior_Score__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>SAL</value>
        </filters>
        <label>My SAL Leads</label>
    </listViews>
    <listViews>
        <fullName>SDR_List_View</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CONVERTED</columns>
        <columns>LEAD.EMAIL_OPT_OUT</columns>
        <columns>Behavior_Score__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Recycle,Disqualified</value>
        </filters>
        <filters>
            <field>Demographic_Score__c</field>
            <operation>greaterOrEqual</operation>
            <value>20</value>
        </filters>
        <label>SDR My Leads List View</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATE_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>LID__Check_CompanyId_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LID__Check_Company_Id_Value</fullName>
        <active>true</active>
        <description>Throws an exception message if the company id contains non-numerics</description>
        <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
        <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
        <errorMessage>CompanyId should be a numeric value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lead_Status_Detail_Field_Required</fullName>
        <active>true</active>
        <description>When either &quot;Disqualified&quot; or &quot;Recycle&quot; is selected from the &quot;Lead Status&quot; picklist, a corresponding reason code must be populated in the dependent &quot;Lead Status Detail&quot; field.</description>
        <errorConditionFormula>AND(

OR(
ISPICKVAL(Status,&quot;Disqualified&quot;),
ISPICKVAL(Status,&quot;Recycle&quot;)),
NOT($Profile.Name = &quot;System Administrator&quot;),
ISBLANK(TEXT(Lead_Status_Detail__c)))</errorConditionFormula>
        <errorDisplayField>Lead_Status_Detail__c</errorDisplayField>
        <errorMessage>Populate &quot;Lead Status Detail&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields_on_Lead</fullName>
        <active>true</active>
        <description>Rule requiring Email, First Name, and Country Code fields to be populated.</description>
        <errorConditionFormula>AND(
OR(
ISBLANK(Email),
ISBLANK(FirstName),
ISBLANK(Country)),
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($Profile.Name = &quot;Neo4j - API Only&quot;),
NOT($Profile.Name = &quot;Neo4j - Marketo Sync&quot;)
)</errorConditionFormula>
        <errorMessage>Please make sure the following fields are populated: Email, First Name, and Country Code.</errorMessage>
    </validationRules>
</CustomObject>